# nbpreview

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.md  LICENSE.rst  README.md  README.rst  justfile  mypy.ini  noxfile.py  pyproject.toml  themes.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  configure.md  credits.md  dependencies.md  examples.toml  features.md  generate_examples.py  index.md  index.rst  installation.md  license.md  nbpreview_logo.fig  prior_art.md  reference.md  reference.rst  requirements.txt  usage.md  usage.rst
docs/_static/css/: custom.css
docs/_static/examples/: cell_magic_syntax_highlight.html  dark_plot_block.html  example_notebook.html  html.html  images_block.html  images_braille.html  latex.html  links.html  markdown.html  stderr.html  theme_dracula.html  theme_rainbow_dash.html  vega.html
docs/_static/examples/html/: dark_plot_braille.html  dark_plot_negative_character.html  dark_plot_positive_character.html  dataframe.html  example_notebook.html  images_character.html  julia_syntax_highlight.html  links.html  long_code.html  markdown.html  theme_material.html  theme_monokai.html  theme_one_dark.html  theme_paraiso_light.html  traceback.html
docs/_static/generated_html/: dataframe.html  example_notebook_dataframe.html  example_notebook_posterior_predictive_progress_bar.html  example_notebook_sampling_progress_bar.html  html.html  links_table.html  links_vega.html  stderr.html  vega.html
docs/example_notebook_cells/: bash_cell_magic.json  dark_plot.json  hero_notebook.ipynb  images.json  julia_code.json  markdown.json  model.py  plots.py  traceback.json
docs/example_notebook_cells/content/: code.json  dataframe.json  example_notebook.json  html.json  latex.json  links.json  long_code.json  stderr.json  vega.json
docs/example_notebook_cells/templates/: html_template.jinja  svg_template.jinja
src/nbpreview/: __init__.py  __main__.py  _color_typer.py  cli_choices.py  errors.py  notebook.py  option_values.py  parameters.py  render.py
src/nbpreview/component/: __init__.py  data.py  display_data.py  error.py  execution_indicator.py  input.py  link.py  markdown.py  render.py  row.py  stream.py
src/nbpreview/component/content/: __init__.py  input.py
src/nbpreview/component/content/output/: __init__.py  error.py  output.py  stream.py
src/nbpreview/component/content/output/result/: __init__.py  display_data.py  drawing.py  execution_indicator.py  latex.py  link.py  markdown_extensions.py  result.py  table.py
src/nbpreview/data/: __init__.py
src/nbpreview/templates/: vega_template.jinja
tests/: __init__.py  conftest.py  notebook.ipynb  test_main.py  test_notebook.py  test_render.py
tests/assets/: ART_CREDIT.rst
tests/component/: test_row.py
tests/component/content/output/: test_error.py  test_stream.py
tests/component/content/output/result/: test_drawing.py
tests/expected_outputs/: test_braille_drawing.txt  test_charater_drawing.txt  test_image_link_markdown_cell.txt  test_image_markdown_cell.txt  test_render_block_image.txt  test_render_error_traceback_no_hang.txt
tests/unit/: __init__.py  test_main.py  test_notebook.py  test_option_values.py  test_parameters.py
tests/unit/assets/: LICENSE.md  link_encoded_image.ipynb  matplotlibrc  notebook.ipynb
tests/unit/component/: __init__.py  test_markdown.py  test_row.py
tests/unit/component/content/: __init__.py
tests/unit/component/content/output/: __init__.py  test_error.py  test_stream.py
tests/unit/component/content/output/result/: __init__.py  test_drawing.py  test_link.py  test_markdown_extensions.py  test_table.py
tests/unit/expected_outputs/: test_automatic_plain.txt  test_bullet_markdown_cell.txt  test_change_theme_notebook_file[--theme-light-None].txt  test_change_theme_notebook_file[--theme-light].txt  test_change_theme_notebook_file[-t-dark-None].txt  test_change_theme_notebook_file[-t-monokai-None].txt  test_change_theme_notebook_file[None-None-default].txt  test_code_markdown_cell.txt  test_code_wrap.txt  test_code_wrap_notebook_file[--code-wrap-None].txt  test_code_wrap_notebook_file[-q-None].txt  test_code_wrap_notebook_file[None-1].txt  test_color_help.txt  test_color_notebook_file[--color-None-None].txt  test_color_notebook_file[-o-None-None].txt  test_color_notebook_file[None-NBPREVIEW_COLOR-0].txt  test_color_notebook_file[None-TERM-dumb].txt  test_color_system_notebook_file[--color-system-standard-None].txt  test_color_system_notebook_file[--cs-256-None].txt  test_color_system_notebook_file[None-None-windows].txt  test_color_system_notebook_file[None-nbpreview_color_system-windows].txt  test_exit_invalid_file_output.txt  test_file_and_stdin.txt  test_files_output_notebook_file[--no-files-None].txt  test_files_output_notebook_file[-l-None].txt  test_files_output_notebook_file[None-1].txt  test_force_plain.txt  test_heading_markdown_cell.txt  test_hide_output_notebook_file[--hide-output-None].txt  test_hide_output_notebook_file[-h-None].txt  test_hide_output_notebook_file[None-1].txt  test_html_encoded_image_link_text.txt  test_hyperlink_hints_output_notebook_file[--hide-hyperlink-hints-None].txt  test_hyperlink_hints_output_notebook_file[-y-None].txt  test_hyperlink_hints_output_notebook_file[None-1].txt  test_hyperlinks_output_notebook_file[--no-hyperlinks-None].txt  test_hyperlinks_output_notebook_file[-r-None].txt  test_hyperlinks_output_notebook_file[None-0].txt  test_image_drawing_notebook_file[--id-character-None].txt  test_image_drawing_notebook_file[--image-drawing-block-None].txt  (+79 more)
tests/util/: __ini__.py  debug.py  process_output.py
