[tool.poetry]
name = "nbpreview"
version = "0.8.1"
description = "nbpreview"
authors = ["Paulo S. Costa <Paulo.S.Costa5@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/paw-lu/nbpreview"
repository = "https://github.com/paw-lu/nbpreview"
documentation = "https://nbpreview.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/paw-lu/nbpreview/releases"
Issues = "https://github.com/paw-lu/nbpreview/issues"

# dependencies-start

[tool.poetry.dependencies]
python = "^3.8.0"
rich = "^10.9.0"
typer = "^0.4.0"
nbformat = {extras = ["fast"], version = "^5.2.0"}
Pygments = "^2.10.0"
ipython = ">=7.27,<9.0"
lxml = "^4.6.3"
pylatexenc = "^2.10"
httpx = ">=0.19,<0.23"
Jinja2 = "^3.0.1"
html2text = "^2020.1.16"
types-click = "^7.1.5"
Pillow = ">=8.3.1,<10.0.0"
picharsso = "^2.0.1"
validators = "^0.18.2"
yarl = "^1.6.3"
markdown-it-py = ">=1.1,<3.0"
mdit-py-plugins = "^0.3.0"
click-help-colors = "^0.9.1"
term-image = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = { extras = ["toml"], version = "^6.3" }
safety = "^1.10.3"
mypy = "^0.942"
typeguard = "^2.13.3"
xdoctest = { extras = ["colors"], version = "^1.0.0" }
sphinx = "^4.5.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = { extras = ["jupyter"], version = ">=21.12b0" }
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.3.23"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
pre-commit-hooks = "^4.1.0"
sphinx-click = "^3.1.0"
Pygments = "^2.10.0"
pyupgrade = "^2.31.1"
furo = ">=2021.11.12"
pdbpp = "^0.10.3"
ipykernel = "^6.10.0"
pytest-mock = "^3.7.0"
interrogate = "^1.5.0"
tryceratops = "^1.0.1"
isort = "^5.10.1"
nbqa = "^1.3.1"
click = "^8.0.4"
autoflake = "^1.4"
myst-parser = "^0.17.0"
sphinxext-opengraph = "^0.6.2"
sphinx-copybutton = "^0.5.0"
sphinx-design = "^0.0.13"
sphinx-autodoc-typehints = "^1.17.0"
tomli = "^2.0.1"
sphinx-favicon = "^0.2"

# dependencies-end

[tool.poetry.scripts]
nbpreview = "nbpreview.__main__:app"
nbp = "nbpreview.__main__:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["nbpreview", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Typing overloads are never run
    "@typing.overload",
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "click_help_colors,jsonschema,lxml.*,nbformat.*,PIL.*,picharsso.*,pygments,pylatexenc,pytest_mock,term_img,validators"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nbpreview"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "mdit_py_plugins.*"
no_implicit_reexport = false

# Might change, see https://github.com/python/mypy/issues/10198
[tool.mypy-jinja2]
no_implicit_reexport = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "no_atty_mock: Test where sys.stdout.isatty should not be mocked",
    "no_typeguard: Tests typeguard should ignore",
]
norecursedirs = "tests/util"

[tool.interrogate]
verbose = 2
fail-under = 100
color = true

[tool.isort]
profile = "black"

[tool.nbqa.dont_skip_bad_cells]
black = true
flake8 = true
pyupgrade = true
isort = true

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=D100"]
