[tool.poetry]
authors = ["Paulo S. Costa <Paulo.S.Costa5@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "nbpreview"
documentation = "https://nbpreview.readthedocs.io"
homepage = "https://github.com/paw-lu/nbpreview"
license = "MIT"
name = "nbpreview"
readme = "README.md"
repository = "https://github.com/paw-lu/nbpreview"
version = "0.9.1"

[tool.poetry.urls]
Changelog = "https://github.com/paw-lu/nbpreview/releases"
Issues = "https://github.com/paw-lu/nbpreview/issues"

# dependencies-start

[tool.poetry.dependencies]
Jinja2 = ">=3.0.1"
Pillow = ">=8.3.1,<10.0.0"
Pygments = ">=2.10.0"
click-help-colors = ">=0.9.1"
html2text = ">=2020.1.16"
httpx = ">=0.19,<0.24"
ipython = ">=7.27,<9.0"
lxml = ">=4.6.3"
markdown-it-py = ">=1.1,<3.0"
mdit-py-plugins = ">=0.3.0"
nbformat = { extras = ["fast"], version = ">=5.2.0" }
picharsso = ">=2.0.1"
pylatexenc = ">=2.10"
python = "^3.11.0"
rich = ">=12.4.1"
term-image = ">=0.3.0"
typer = ">=0.4.1,<0.6.0"
types-click = ">=7.1.5"
validators = ">=0.18.2,<0.21.0"
yarl = ">=1.6.3"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
autoflake = ">=1.4"
black = { extras = ["jupyter"], version = ">=21.12b0" }
click = ">=8.1.3"
coverage = { extras = ["toml"], version = ">=6.4" }
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=3.0.0"
flake8-bugbear = ">=22.6.22"
flake8-docstrings = ">=1.5.0"
flake8-rst-docstrings = ">=0.2.6"
furo = ">=2021.11.12"
interrogate = ">=1.5.0"
ipykernel = ">=6.15.0"
isort = ">=5.10.1"
mypy = ">=0.961"
myst-parser = ">=0.18.0"
nbqa = ">=1.3.1"
pdbpp = ">=0.10.3"
pep8-naming = ">=0.13.0"
pre-commit = ">=4.3.0"
pre-commit-hooks = ">=6.0.0"
pytest = ">=7.1.2"
pytest-mock = ">=3.8.1"
pyupgrade = ">=2.34.0"
safety = ">=2.0.0"
sphinx = ">=5.0.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = ">=1.18.3"
sphinx-click = ">=4.2.0"
sphinx-copybutton = ">=0.5.0"
sphinx-design = ">=0.2.0"
sphinx-favicon = ">=0.2"
sphinxext-opengraph = ">=0.6.3"
tomli = ">=2.0.1"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=1.0.0" }

# dependencies-end

[tool.poetry.scripts]
nbp = "nbpreview.__main__:app"
nbpreview = "nbpreview.__main__:app"

[tool.coverage.paths]
source = ["*/site-packages", "src"]
tests = ["*/tests", "tests"]

[tool.coverage.run]
branch = true
source = ["nbpreview", "tests"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Typing overloads are never run
    "@typing.overload",
]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "click_help_colors,jsonschema,lxml.*,nbformat.*,PIL.*,picharsso.*,pygments,pylatexenc,pytest_mock,term_image,validators"

[[tool.mypy.overrides]]
module = "mdit_py_plugins.*"
no_implicit_reexport = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
markers = [
    "no_atty_mock: Test where sys.stdout.isatty should not be mocked",
    "no_typeguard: Tests typeguard should ignore",
]
norecursedirs = "tests/util"

[tool.interrogate]
color = true
fail-under = 100
verbose = 2

[tool.isort]
profile = "black"

[tool.nbqa.dont_skip_bad_cells]
black = true
flake8 = true
isort = true
pyupgrade = true

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=D100"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
